--- a/index.html
+++ b/index.html
@@ -3,9 +3,71 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>site de telephone</title>
 </head>
 <body>
-    
+    <section class="iphone">
+   <div id="flexContainer">
+       <div class="threeCards">
+           <div class="header">
+               <h2><span id="spanPris">1 524 €</span></h2>
+
+               <div class="price">
+                   <h1>iphone</h1>
+               </div>
+
+
+               <div class="details">7G</div>
+               <div class="details">150% d estocage</div>
+               <div class="details">color yellow</div>
+               <div id="btn"><a href="#">s'inscrir</a></div>
+               
+           </div>
+       </div>
+   </div>
+
+
+
+   <div id="flexContainer">
+    <div class="threeCards">
+        <div class="header">
+            <h2><span id="spanPris">1 524 €</span></h2>
+
+            <div class="price">
+                <h1>iphone</h1>
+            </div>
+
+
+            <div class="details">7G</div>
+            <div class="details">150% d estocage</div>
+            <div class="details">color yellow</div>
+            <div id="btn"><a href="#">s'inscrir</a></div>
+
+        </div>
+    </div>
+</div>
+
+
+
+<div id="flexContainer">
+    <div class="threeCards">
+        <div class="header">
+            <h2><span id="spanPris">1 524 €</span></h2>
+
+            <div class="price">
+                <h1>iphone</h1>
+            </div>
+
+
+            <div class="details">7G</div>
+            <div class="details">150% d estocage</div>
+            <div class="details">color yellow</div>
+            <div id="btn"><a href="#">s'inscrir</a></div>
+
+    </div>
+    </div>
+</div>
+</section>
 </body>
 </html>
