--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Achet tont telephone</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium adipisci 
             asperiores quaerat sapiente...</p>
-            <a href="iphone.html" class="button">voire les telephone</a>
+            <a href="chargement.html" class="button">voire les telephone</a>
     </header>
 </body>
 </html>
