--- a/chargement.html
+++ b/chargement.html
@@ -9,8 +9,18 @@
     <title>iphone</title>
 </head>
 <body>
+    
+    <div class="containeur">
+        <div class="divh3"><h3 class="h3">iphone ultra</h3></div>
 
-    <div class="loader"></div>
-
+        <div class="divh2"><h2 class="h2">3 520 €</h2></div>
+    
+<div class="nul">
+    <div class="details">850G</div>
+    <div class="detail">color yellow</div>
+    <div class="etail">rapide</div>
+    <div class="tail">légé</div>
+</div>
+</div>
 </body>
 </html>
