--- a/chargement.html
+++ b/chargement.html
@@ -10,17 +10,23 @@
 </head>
 <body>
     
-    <div class="containeur">
-        <div class="divh3"><h3 class="h3">iphone ultra</h3></div>
+    <div id="flexContaineur">
+        <div class="threeCards">
+            <div class="header">
+                <h2><span id="spanPris">5 120 €</span></h2>
 
-        <div class="divh2"><h2 class="h2">3 520 €</h2></div>
-    
-<div class="nul">
-    <div class="details">850G</div>
-    <div class="detail">color yellow</div>
-    <div class="etail">rapide</div>
-    <div class="tail">légé</div>
-</div>
-</div>
+                <div class="price">
+                    <h1>iphone</h1>
+                </div>
+
+
+                <div class="details">1 500 G </div>
+                <div class="details">color yellow</div>
+                <div class="details">pas trés large</div>
+                <div class="details">petit</div>
+
+            </div>
+        </div>
+    </div>
 </body>
 </html>
