--- a/chargement.html
+++ b/chargement.html
@@ -24,6 +24,47 @@
                 <div class="details">color yellow</div>
                 <div class="details">pas trés large</div>
                 <div class="details">petit</div>
+                <div id="btn"><a href="#">s'inscrir</a></div>
+
+            </div>
+        </div>
+    </div>
+    
+    <div id="flexContaineur">
+        <div class="threeCards">
+            <div class="header">
+                <h2><span id="spanPris">5 120 €</span></h2>
+
+                <div class="price">
+                    <h1>iphone</h1>
+                </div>
+
+
+                <div class="details">1 500 G </div>
+                <div class="details">color yellow</div>
+                <div class="details">pas trés large</div>
+                <div class="details">petit</div>
+                <div id="btn"><a href="#">s'inscrir</a></div>
+
+            </div>
+        </div>
+    </div>
+
+    <div id="flexContaineur">
+        <div class="threeCards">
+            <div class="header">
+                <h2><span id="spanPris">5 120 €</span></h2>
+
+                <div class="price">
+                    <h1>iphone</h1>
+                </div>
+
+
+                <div class="details">1 500 G </div>
+                <div class="details">color yellow</div>
+                <div class="details">pas trés large</div>
+                <div class="details">petit</div>
+                <div id="btn"><a href="#">s'inscrir</a></div>
 
             </div>
         </div>
