--- a/chargement.html
+++ b/chargement.html
@@ -20,7 +20,7 @@
                 </div>
 
 
-                <div class="details">1 500 G </div>
+                <div class="details">1 544 G </div>
                 <div class="details">color yellow</div>
                 <div class="details">pas trés large</div>
                 <div class="details">petit</div>
@@ -33,17 +33,17 @@
     <div id="flexContaineur">
         <div class="threeCards">
             <div class="header">
-                <h2><span id="spanPris">5 120 €</span></h2>
+                <h2><span id="spanPris">3 250 €</span></h2>
 
                 <div class="price">
-                    <h1>iphone</h1>
+                    <h1>iphone x</h1>
                 </div>
 
 
-                <div class="details">1 500 G </div>
-                <div class="details">color yellow</div>
-                <div class="details">pas trés large</div>
-                <div class="details">petit</div>
+                <div class="details">1 000 G </div>
+                <div class="details">color blue</div>
+                <div class="details">large</div>
+                <div class="details">grand</div>
                 <div id="btn"><a href="#">s'inscrir</a></div>
 
             </div>
@@ -53,17 +53,17 @@
     <div id="flexContaineur">
         <div class="threeCards">
             <div class="header">
-                <h2><span id="spanPris">5 120 €</span></h2>
+                <h2><span id="spanPris">1 850 €</span></h2>
 
                 <div class="price">
                     <h1>iphone</h1>
                 </div>
 
 
-                <div class="details">1 500 G </div>
-                <div class="details">color yellow</div>
+                <div class="details">900 G </div>
+                <div class="details">color black</div>
                 <div class="details">pas trés large</div>
-                <div class="details">petit</div>
+                <div class="details">grand</div>
                 <div id="btn"><a href="#">s'inscrir</a></div>
 
             </div>
