--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header id="showcase">
-        <h1>Achet tont telephone</h1>
+        <h1>Achete ton telephone</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium adipisci 
             asperiores quaerat sapiente...</p>
             <a href="chargement.html" class="button">voire les telephone</a>
