--- a/chargement.html
+++ b/chargement.html
@@ -5,68 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="cool.js">
     <title>iphone</title>
 </head>
 <body>
-    <div id="flexContaineur">
-        <div class="threeCards">
-            <div class="header">
-                <h2><span id="spanPris">5 120 €</span></h2>
-
-                <div class="price">
-                    <h1>iphone</h1>
-                </div>
-
-
-                <div class="details">1 544 G </div>
-                <div class="details">color yellow</div>
-                <div class="details">pas trés large</div>
-                <div class="details">petit</div>
-                <div id="btn"><a href="#">s'inscrir</a></div>
-
+    <div class="cartes">
+        <div class="partImg">
+            <div class="filtreBlue">
+                <div class="btnRreveal">acheter</div>
             </div>
         </div>
-    </div>
-        
-   
-    <div id="flexContaineur">
-        <div class="threeCards">
-            <div class="header">
-                <h2><span id="spanPris">3 250 €</span></h2>
 
-                <div class="price">
-                    <h1>iphone x</h1>
-                </div>
-
-
-                <div class="details">1 000 G </div>
-                <div class="details">color blue</div>
-                <div class="details">large</div>
-                <div class="details">grand</div>
-                <div id="btn"><a href="#">s'inscrir</a></div>
-
-            </div>
+        <div class="titrePris">
+            <h2 class="titreCarte">
+                galaxis note 
+            </h2>
+            <p class="prix">1324 €</p>
         </div>
-    </div>
 
 
-    <div id="flexContaineur">
-        <div class="threeCards">
-            <div class="header">
-                <h2><span id="spanPris">1 850 €</span></h2>
-
-                <div class="price">
-                    <h1>iphone</h1>
-                </div>
-
-
-                <div class="details">900 G </div>
-                <div class="details">color black</div>
-                <div class="details">pas trés large</div>
-                <div class="details">grand</div>
-                <div id="btn"><a href="#">s'inscrir</a></div>
-
+        <div class="color">
+            <h2 class="sousTitreC">Colors</h2>
+            <div class="contRond">
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
             </div>
         </div>
     </div>
