--- a/chargement.html
+++ b/chargement.html
@@ -34,5 +34,67 @@
             </div>
         </div>
     </div>
+
+
+
+
+    <div class="cartes">
+        <div class="partImg">
+            <div class="filtreBlue">
+                <div class="btnRreveal">acheter</div>
+            </div>
+        </div>
+
+        <div class="titrePris">
+            <h2 class="titreCarte">
+                galaxis note 
+            </h2>
+            <p class="prix">1324 €</p>
+        </div>
+
+
+        <div class="color">
+            <h2 class="sousTitreC">Colors</h2>
+            <div class="contRond">
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+    <div class="cartes">
+        <div class="partImg">
+            <div class="filtreBlue">
+                <div class="btnRreveal">acheter</div>
+            </div>
+        </div>
+
+        <div class="titrePris">
+            <h2 class="titreCarte">
+                galaxis note 
+            </h2>
+            <p class="prix">1324 €</p>
+        </div>
+
+
+        <div class="color">
+            <h2 class="sousTitreC">Colors</h2>
+            <div class="contRond">
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+                <div class="rond"></div>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
