--- a/chargement.html
+++ b/chargement.html
@@ -17,7 +17,7 @@
 
         <div class="titrePris">
             <h2 class="titreCarte">
-                galaxis note 
+                galaxis ultra 
             </h2>
             <p class="prix">1324 €</p>
         </div>
@@ -47,7 +47,7 @@
 
         <div class="titrePris">
             <h2 class="titreCarte">
-                galaxis note 
+                galaxy ultra 
             </h2>
             <p class="prix">1324 €</p>
         </div>
@@ -78,7 +78,7 @@
 
         <div class="titrePris">
             <h2 class="titreCarte">
-                galaxis note 
+                galaxy ultra 
             </h2>
             <p class="prix">1324 €</p>
         </div>
