--- a/chargement.html
+++ b/chargement.html
@@ -17,7 +17,7 @@
 
         <div class="titrePris">
             <h2 class="titreCarte">
-                galaxis ultra 
+                galaxy ultra 
             </h2>
             <p class="prix">1324 €</p>
         </div>
