--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>Achete ton telephone</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium adipisci 
             asperiores quaerat sapiente...</p>
-            <a href="" class="button">voire les telephone</a>
+            <a href="chargement.html" class="button">voire les telephone</a>
     </header>
 </body>
 </html>
