--- a/chargement.html
+++ b/chargement.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="yess.jpg">
     <title>iphone</title>
 </head>
 <body>
@@ -95,6 +96,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
