une mouche, une araigne est un popo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="lili.png">
-    <link rel="icon" href="yess.jpg">
+    <link rel="icon" href="ico.png">
     <title>Les telephone</title>
 </head>
 <body>
