--- a/acheter.html
+++ b/acheter.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="acheter.css">
-    <title>page d'acha</title>
+    <title>page d'achat</title>
 </head>
 <body>
+    
 </body>
 </html>
