une mouche, une araigne est un popo

--- a/acheter.html
+++ b/acheter.html
@@ -8,6 +8,10 @@
     <title>page d'achat</title>
 </head>
 <body>
-    
+    <div class="containeur">
+        <div class="contClass">
+            <div class="cont">achat terminer</div>
+        </div>
+    </div>
 </body>
 </html>
