une mouche, une araigne est un popo

--- a/chargement.html
+++ b/chargement.html
@@ -42,7 +42,7 @@
     <div class="cartes">
         <div class="partImg">
             <div class="filtreBlue">
-                <div class="btnRreveal"><a hreg="chargement.html">acheter</a></div>
+                <div class="btnRreveal"><a hreg="acheter.html">acheter</a></div>
             </div>
         </div>
 
@@ -73,7 +73,7 @@
     <div class="cartes">
         <div class="partImg">
             <div class="filtreBlue">
-                <div class="btnRreveal"><a href="chargement.html">acheter</a></div>
+                <div class="btnRreveal"><a href="acheter.html">acheter</a></div>
             </div>
         </div>
 
